--- a/public/css/main.css
+++ b/public/css/main.css
@@ -104,6 +104,8 @@ body {
 	text-transform: uppercase;
 }
 .left-panel__user {
+	display: flex;
+	align-items: center;
 	padding-left: 46px;
 	padding-right: 30px;
 	padding-top: 20px;
@@ -111,8 +113,8 @@ body {
 	border-bottom: 1px solid #14497a;
 }
 .left-panel__user-photo {
-	width: 56px;
-	height: 56px;
+	width: 60px;
+	height: 70px;
 	border-radius: 80px;
 	float: left;
 	overflow: hidden;
@@ -125,7 +127,7 @@ body {
 	font-size: 18px;
 	line-height: 1.3;
 	font-weight: 600;
-	margin-left: 76px;
+	margin-left: 16px;
 }
 .left-panel__navigation {
 	color: #cbdceb;
